Fix image alignment of Boss P

--- a/style/styles.css
+++ b/style/styles.css
@@ -636,9 +636,9 @@
 
     .aboutme-inner {
       background: #ffffff;
-      padding: 60px 70px 0 70px;
+      padding: 50px 60px 0 50px;
       border-radius: 24px 24px 0 0;
-      max-width: 1360px;
+      max-width: 1400px;
       width: 100%;
       min-height: calc(100vh - var(--navbar-height) - 40px);
       overflow-y: hidden;
@@ -658,25 +658,23 @@
     }
 
     .aboutme-inner .photo img {
-      width: clamp(500px, 82vw, 800px);
-      height: auto;              
-      object-fit: contain;       
-      object-position: bottom;    
-      transform: scale(1.20);     
+      width: 120%;       
+      max-width: none;    
+      height: auto;
+      object-fit: cover;   
+      object-position: bottom;
       transition: transform 0.4s ease;
-      padding-left: 9%;
+      padding-left: 5px;
     }
 
-    /* Title styling */
     .aboutme-inner .title {
-      font: normal normal normal 60px/72px "Balerno Serif", serif;
-      margin-bottom: 22px;
+      font: normal normal bold 70px/180px "Balerno Serif", serif;
+      padding: 0px 0 0 0;
       color: #2d2b28;
     }
 
-    /* Paragraph spacing */
     .aboutme-inner p {
-      margin-bottom: 18px;
+      margin-bottom: 35px;
       font-size: 16px;
       line-height: 1.7;
       color: #4c4c47;
